Prevent graph tooltips in results from being cut off

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -54,3 +54,7 @@ body {
     background-color: rgba(255, 255, 255, 0.85) !important;
     border-color: #333 !important;
 }
+
+.result-chart svg {
+    overflow: visible !important;
+}
